--- a/Space_Invaders(C++)/Space_Invaders_Game/Space_Invaders_Game/Space_Invaders_Game.vcxproj.filters
+++ b/Space_Invaders(C++)/Space_Invaders_Game/Space_Invaders_Game/Space_Invaders_Game.vcxproj.filters
@@ -18,28 +18,28 @@
     <ClCompile Include="Space_Invaders_Game.cpp">
       <Filter>Pliki źródłowe</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\Space_Invaders\Space_Invaders\Game.ixx">
-      <Filter>Pliki nagłówkowe</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\Space_Invaders\Space_Invaders\Game.cpp">
-      <Filter>Pliki nagłówkowe</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\Space_Invaders\Space_Invaders\Enemy.ixx">
-      <Filter>Pliki nagłówkowe</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\Space_Invaders\Space_Invaders\Enemy.cpp">
-      <Filter>Pliki nagłówkowe</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\Space_Invaders\Space_Invaders\Player.ixx">
-      <Filter>Pliki nagłówkowe</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\Space_Invaders\Space_Invaders\Player.cpp">
-      <Filter>Pliki nagłówkowe</Filter>
-    </ClCompile>
     <ClCompile Include="Bullet.ixx">
       <Filter>Pliki nagłówkowe</Filter>
     </ClCompile>
     <ClCompile Include="Bullet.cpp">
+      <Filter>Pliki nagłówkowe</Filter>
+    </ClCompile>
+    <ClCompile Include="Player.ixx">
+      <Filter>Pliki nagłówkowe</Filter>
+    </ClCompile>
+    <ClCompile Include="Player.cpp">
+      <Filter>Pliki nagłówkowe</Filter>
+    </ClCompile>
+    <ClCompile Include="Game.ixx">
+      <Filter>Pliki nagłówkowe</Filter>
+    </ClCompile>
+    <ClCompile Include="Game.cpp">
+      <Filter>Pliki nagłówkowe</Filter>
+    </ClCompile>
+    <ClCompile Include="Enemy.ixx">
+      <Filter>Pliki nagłówkowe</Filter>
+    </ClCompile>
+    <ClCompile Include="Enemy.cpp">
       <Filter>Pliki nagłówkowe</Filter>
     </ClCompile>
   </ItemGroup>
