Comiit prawie skończony

--- a/ColorBackgroundRemover(Cpp_ASM)/ColorBackgroundRemover(Cpp_ASM)/ColorBackgroundRemover(Cpp_ASM).csproj
+++ b/ColorBackgroundRemover(Cpp_ASM)/ColorBackgroundRemover(Cpp_ASM)/ColorBackgroundRemover(Cpp_ASM).csproj
@@ -39,9 +39,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>x86</PlatformTarget>
+    <PlatformTarget>x64</PlatformTarget>
     <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
+    <Optimize>false</Optimize>
     <OutputPath>bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
@@ -95,12 +95,6 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\CPPColorRemoverLIB\CPPColorRemoverLIB.vcxproj">
-      <Project>{cfbde5a3-596b-4685-93a7-328d9a65ba3d}</Project>
-      <Name>CPPColorRemoverLIB</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.7.2">
       <Visible>False</Visible>
       <ProductName>Microsoft .NET Framework 4.7.2 %28x86 i x64%29</ProductName>
@@ -111,6 +105,9 @@
       <ProductName>.NET Framework 3.5 SP1</ProductName>
       <Install>false</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <Analyzer Include="..\x64\Release\CPPColorRemoverLIB.dll" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
